dataset1235/2025-2/2947369575/users/3299079478/executions/1003782500_3455942218.log
== SUBMISSION (2025-08-27 23:08:52)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:07:25)
-- CODE: 

valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
(print(round(valor_total_compra,1)))
(print(round(dinheiro_restante,1)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:04:12)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra

print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:08:51)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:07:26)
-- CODE: 

valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
(print(round(valor_total_compra,1)))
(print(round(dinheiro_restante,1)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:10:04)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "))
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:09:10)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:10:23)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "))
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:09:09)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:09:37)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:07:51)
-- CODE: 

valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1)))
print(round(dinheiro_restante,1)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:07:28)
-- CODE: 

valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
(print(round(valor_total_compra,1)))
(print(round(dinheiro_restante,1)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Qual o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:09:08)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:04:19)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra

print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 1
    valor_unitario = float(input("Qual o valor unitario do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:10:02)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "))
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:09:35)
-- CODE: 

valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
dinheiro_disponivel = float(input("Qual o valor disponivel para a compra: R$ "))

quantidade_jogos = 8
valor_frete = 45.00

valor_total_jogos = valor_unitario * quantidade_jogos
valor_total_compra = valor_total_jogos + valor_frete
dinheiro_restante = dinheiro_disponivel - valor_total_compra                         
print(round(valor_total_compra,1))
print(round(dinheiro_restante,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 2
    valor_unitario = float(input("Digite o valor unitário do jogo?: R$ "
                                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
